--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
-    <title>React Timer App</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <title>CHRONOLOGICK</title>
   </head>
   <body>
     <div id="app"></div>
